fix case where the same element is in $each part of $addToSet SERVER-2249